[package]
name = "sensor_central"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["local", "ble"]
local = ["gpio-cdev"]
ble = ["bluebus", "aes-gcm", "rand"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = {version = "0.10"}

linux-embedded-hal = "0.2"
bme280 = "0.1"

gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", branch = "master", optional = true}
nix = "0.17"

byteorder = "1.3"
num = { version = "0.2"}
num-traits = "0.2"
smallvec = "0.6"

log = "0.4"
fern = "0.6.0"
chrono = "0.4.13" #used for fern logging

structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
crossbeam-channel = "0.4"

bitspec = { git = "https://github.com/dskleingeld/bitspec" }
bluebus = { git = "https://github.com/dskleingeld/bluebus", optional = true }

aes-gcm = {version = "0.6", optional = true}
rand = {version = "0.7.3", optional = true}